--- a/apps/app/src/app/pages/plan/plan.page.html
+++ b/apps/app/src/app/pages/plan/plan.page.html
@@ -1,1 +1,76 @@
-<p>plan works!</p>
+<div class='tui-container tui-container_adaptive'>
+  <div class='tui-row tui-row_adaptive'>
+    <div class='tui-col tui-col_lg-8 tui-col_md-8 tui-col_xs-12'>
+      <h1>Планирование тренировки</h1>
+      <form [formGroup]="form" class='tui-form'>
+        <div class='tui-form__row'>
+          <tui-multi-select
+            formControlName="trainingAim"
+            [tuiTextfieldLabelOutside]="true"
+            [editable]="false"
+            [tuiDropdownOpen]="checkOpen('trainingAim')"
+            (focusedChange)="changeOpen('trainingAim')"
+          >
+            Цель тренировки
+            <tui-data-list-wrapper
+              *tuiDataList
+              tuiMultiSelectGroup
+              [items]="trainingAims"
+            ></tui-data-list-wrapper>
+          </tui-multi-select>
+        </div>
+        <div class='tui-form__row'>
+          <tui-input-files
+            *ngIf="!form.controls.image.value"
+            accept="image/*"
+            formControlName="image"
+            link="Выберите картинку"
+            label='или перетащите ее сюда'
+          ></tui-input-files>
+          <img [src]='imageSrc$ | async'/>
+        </div>
+        <div class='tui-form__header'>Что повлияет на распространение запаха?</div>
+        <div class='tui-form__row'>
+          <tui-multi-select
+            formControlName="smellAffection"
+            [tuiTextfieldLabelOutside]="true"
+            [editable]="false"
+            [tuiDropdownOpen]="checkOpen('smellAffection')"
+            (focusedChange)="changeOpen('smellAffection')"
+          >
+            На параметры запахового конуса влияют:
+            <tui-data-list-wrapper
+              *tuiDataList
+              tuiMultiSelectGroup
+              [items]="smellAffections"
+            ></tui-data-list-wrapper>
+          </tui-multi-select>
+        </div>
+        <div class='tui-form__row'>
+          <tui-textarea formControlName="smellAffectionDescription">Заметки</tui-textarea>
+        </div>
+
+        <div class='tui-form__header'>Что может произойти с запахом?</div>
+        <div class='tui-form__row'>
+          <tui-multi-select
+            formControlName="smellFactor"
+            [tuiTextfieldLabelOutside]="true"
+            [editable]="false"
+            [tuiDropdownOpen]="checkOpen('smellFactor')"
+            (focusedChange)="changeOpen('smellFactor')"
+          >
+            Причины появления кумуляции запаха:
+            <tui-data-list-wrapper
+              *tuiDataList
+              tuiMultiSelectGroup
+              [items]="smellFactors"
+            ></tui-data-list-wrapper>
+          </tui-multi-select>
+        </div>
+        <div class='tui-form__row'>
+          <tui-textarea formControlName="smellFactorDescription">Заметки</tui-textarea>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
