--- a/apps/app/src/app/pages/auth/auth.page.html
+++ b/apps/app/src/app/pages/auth/auth.page.html
@@ -7,10 +7,10 @@
           <tui-input formControlName='email'>Email</tui-input>
         </div>
         <div class='tui-form__row'>
-          <tui-input formControlName='password'>Пароль</tui-input>
+          <tui-input-password formControlName='password'>Пароль</tui-input-password>
         </div>
         <div class='tui-form__buttons'>
-          <button tuiButton class='tui-form__button' type='submit'>{{buttonText$ | async}}</button>
+          <button [showLoader]='!!(isLoad$ | async)' tuiButton class='tui-form__button' type='submit'>{{buttonText$ | async}}</button>
         </div>
         <div class='tui-form__row' (click)='changeType($event)'>
           <a tuiLink [pseudo]='true'>{{linkText$ | async}}</a>
