--- a/apps/app/src/app/pages/plan/plan.page.html
+++ b/apps/app/src/app/pages/plan/plan.page.html
@@ -1,13 +1,22 @@
 <div class='tui-container tui-container_adaptive'>
+
+  <div class='tui-row tui-row_adaptive'>
+    <div class='tui-col tui-col_lg-12 tui-col_md-12 tui-col_xs-12'>
+      <div class='tui-space_top-4'>
+        <a href='../'>Назад</a>
+      </div>
+      <h1 class='tui-text_h3 tui-space_bottom-8'>Планирование тренировки</h1>
+    </div>
+  </div>
+
   <div class='tui-row tui-row_adaptive'>
     <div class='tui-col tui-col_lg-8 tui-col_md-8 tui-col_xs-12'>
-      <h1>Планирование тренировки</h1>
-      <form [formGroup]="form" class='tui-form'>
+      <form [formGroup]='form' class='tui-form' (submit)='save($event)'>
         <div class='tui-form__row'>
           <tui-multi-select
-            formControlName="trainingAim"
-            [tuiTextfieldLabelOutside]="true"
-            [editable]="false"
+            formControlName='trainingAim'
+            [tuiTextfieldLabelOutside]='true'
+            [editable]='false'
             [tuiDropdownOpen]="checkOpen('trainingAim')"
             (focusedChange)="changeOpen('trainingAim')"
           >
@@ -15,26 +24,26 @@
             <tui-data-list-wrapper
               *tuiDataList
               tuiMultiSelectGroup
-              [items]="trainingAims"
+              [items]='trainingAims'
             ></tui-data-list-wrapper>
           </tui-multi-select>
         </div>
         <div class='tui-form__row'>
           <tui-input-files
-            *ngIf="!form.controls.image.value"
-            accept="image/*"
-            formControlName="image"
-            link="Выберите картинку"
+            *ngIf='!form.controls.image.value'
+            accept='image/*'
+            formControlName='image'
+            link='Выберите картинку'
             label='или перетащите ее сюда'
           ></tui-input-files>
-          <img [src]='imageSrc$ | async'/>
+          <nw-deletable-image [src]='imageSrc$ | async' (delete)='deleteImage()' />
         </div>
         <div class='tui-form__header'>Что повлияет на распространение запаха?</div>
         <div class='tui-form__row'>
           <tui-multi-select
-            formControlName="smellAffection"
-            [tuiTextfieldLabelOutside]="true"
-            [editable]="false"
+            formControlName='smellAffection'
+            [tuiTextfieldLabelOutside]='true'
+            [editable]='false'
             [tuiDropdownOpen]="checkOpen('smellAffection')"
             (focusedChange)="changeOpen('smellAffection')"
           >
@@ -42,20 +51,20 @@
             <tui-data-list-wrapper
               *tuiDataList
               tuiMultiSelectGroup
-              [items]="smellAffections"
+              [items]='smellAffections'
             ></tui-data-list-wrapper>
           </tui-multi-select>
         </div>
         <div class='tui-form__row'>
-          <tui-textarea formControlName="smellAffectionDescription">Заметки</tui-textarea>
+          <tui-textarea formControlName='smellAffectionDescription'>Заметки</tui-textarea>
         </div>
 
         <div class='tui-form__header'>Что может произойти с запахом?</div>
         <div class='tui-form__row'>
           <tui-multi-select
-            formControlName="smellFactor"
-            [tuiTextfieldLabelOutside]="true"
-            [editable]="false"
+            formControlName='smellFactor'
+            [tuiTextfieldLabelOutside]='true'
+            [editable]='false'
             [tuiDropdownOpen]="checkOpen('smellFactor')"
             (focusedChange)="changeOpen('smellFactor')"
           >
@@ -63,14 +72,19 @@
             <tui-data-list-wrapper
               *tuiDataList
               tuiMultiSelectGroup
-              [items]="smellFactors"
+              [items]='smellFactors'
             ></tui-data-list-wrapper>
           </tui-multi-select>
         </div>
         <div class='tui-form__row'>
-          <tui-textarea formControlName="smellFactorDescription">Заметки</tui-textarea>
+          <tui-textarea formControlName='smellFactorDescription'>Заметки</tui-textarea>
+        </div>
+
+        <div class='tui-form__row'>
+          <button tuiButton type='submit'>Сохранить</button>
         </div>
       </form>
     </div>
   </div>
+
 </div>
