--- a/apps/app/src/app/pages/main/main.page.html
+++ b/apps/app/src/app/pages/main/main.page.html
@@ -1,2 +1,14 @@
-<a href='/plan'>plan</a>
+<div class='tui-container tui-container_adaptive'>
+  <div class='tui-row tui-row_adaptive'>
+    <div class='tui-col tui-col_lg-12 tui-col_md-12 tui-col_xs-12'>
+      <div class='menu'>
+        <a href='/plans'>Список планов</a>
+        <a href='/plan'>Создать план</a>
+        <a href='/training'>Создать тренировку</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <router-outlet></router-outlet>
