--- a/apps/app/src/app/pages/plan/plan.page.html
+++ b/apps/app/src/app/pages/plan/plan.page.html
@@ -2,9 +2,6 @@
 
   <div class='tui-row tui-row_adaptive'>
     <div class='tui-col tui-col_lg-12 tui-col_md-12 tui-col_xs-12'>
-      <div class='tui-space_top-4'>
-        <a href='../'>Назад</a>
-      </div>
       <h1 class='tui-text_h3 tui-space_bottom-8'>Планирование тренировки</h1>
     </div>
   </div>
@@ -13,8 +10,17 @@
     <div class='tui-col tui-col_lg-8 tui-col_md-8 tui-col_xs-12'>
       <form [formGroup]='form' class='tui-form' (submit)='save($event)'>
         <div class='tui-form__row'>
+          <tui-input
+            [class.tui-skeleton]="!!(formLoader$ | async)"
+            formControlName='title'
+          >Придумайте название <span class="tui-required"></span>
+          </tui-input>
+          <tui-error formControlName='title' [error]="[] | tuiFieldError | async"></tui-error>
+        </div>
+        <div class='tui-form__row'>
           <tui-multi-select
             formControlName='trainingAim'
+            [class.tui-skeleton]="!!(formLoader$ | async)"
             [tuiTextfieldLabelOutside]='true'
             [editable]='false'
             [tuiDropdownOpen]="checkOpen('trainingAim')"
@@ -35,6 +41,7 @@
             formControlName='image'
             link='Выберите картинку'
             label='или перетащите ее сюда'
+            [class.tui-skeleton]="!!(formLoader$ | async)"
           ></tui-input-files>
           <nw-deletable-image [src]='imageSrc$ | async' (delete)='deleteImage()' />
         </div>
@@ -42,6 +49,7 @@
         <div class='tui-form__row'>
           <tui-multi-select
             formControlName='smellAffection'
+            [class.tui-skeleton]="!!(formLoader$ | async)"
             [tuiTextfieldLabelOutside]='true'
             [editable]='false'
             [tuiDropdownOpen]="checkOpen('smellAffection')"
@@ -56,13 +64,17 @@
           </tui-multi-select>
         </div>
         <div class='tui-form__row'>
-          <tui-textarea formControlName='smellAffectionDescription'>Заметки</tui-textarea>
+          <tui-textarea
+            formControlName='smellAffectionDescription'
+            [class.tui-skeleton]="!!(formLoader$ | async)"
+          >Заметки</tui-textarea>
         </div>
 
         <div class='tui-form__header'>Что может произойти с запахом?</div>
         <div class='tui-form__row'>
           <tui-multi-select
             formControlName='smellFactor'
+            [class.tui-skeleton]="!!(formLoader$ | async)"
             [tuiTextfieldLabelOutside]='true'
             [editable]='false'
             [tuiDropdownOpen]="checkOpen('smellFactor')"
@@ -77,11 +89,14 @@
           </tui-multi-select>
         </div>
         <div class='tui-form__row'>
-          <tui-textarea formControlName='smellFactorDescription'>Заметки</tui-textarea>
+          <tui-textarea
+            formControlName='smellFactorDescription'
+            [class.tui-skeleton]="!!(formLoader$ | async)"
+          >Заметки</tui-textarea>
         </div>
 
-        <div class='tui-form__row'>
-          <button tuiButton type='submit'>Сохранить</button>
+        <div class='tui-form__row tui-space_bottom-8'>
+          <button tuiButton type='submit' [showLoader]='!!(submitLoader$ | async)'>Сохранить</button>
         </div>
       </form>
     </div>
