feat: add theme

--- a/apps/app/src/app/app.component.html
+++ b/apps/app/src/app/app.component.html
@@ -1,3 +1,4 @@
-<tui-root>
+<tui-theme-night *ngIf='!!(theme$ | async)'></tui-theme-night>
+<tui-root [tuiMode]='theme$ | async'>
   <router-outlet></router-outlet>
 </tui-root>
