--- a/apps/app/src/app/pages/main/main.page.html
+++ b/apps/app/src/app/pages/main/main.page.html
@@ -5,10 +5,10 @@
         <a href='/plans'>Список планов</a>
         <a href='/plan'>Создать план</a>
         <a href='/training'>Создать тренировку</a>
+        <a (click)='changeTheme()'>Сменить тему</a>
       </div>
     </div>
   </div>
 </div>
-
 
 <router-outlet></router-outlet>
