--- a/apps/app/src/app/pages/auth/auth.page.html
+++ b/apps/app/src/app/pages/auth/auth.page.html
@@ -1,3 +1,4 @@
+<nw-auth-header></nw-auth-header>
 <div class='tui-container tui-container_adaptive'>
   <div class='tui-row tui-row_adaptive'>
     <div class='tui-col tui-col_lg-6 tui-col_md-8 tui-col_xs-12'>
