--- a/apps/app/src/app/pages/main/main.page.html
+++ b/apps/app/src/app/pages/main/main.page.html
@@ -1,14 +1,3 @@
-<div class='tui-container tui-container_adaptive'>
-  <div class='tui-row tui-row_adaptive'>
-    <div class='tui-col tui-col_lg-12 tui-col_md-12 tui-col_xs-12'>
-      <div class='menu'>
-        <a href='/plans'>Список планов</a>
-        <a href='/plan'>Создать план</a>
-        <a href='/training'>Создать тренировку</a>
-        <a (click)='changeTheme()'>Сменить тему</a>
-      </div>
-    </div>
-  </div>
-</div>
+<nw-header></nw-header>
 
 <router-outlet></router-outlet>
