feat: training form

--- a/apps/app/src/app/pages/plan/plan.page.html
+++ b/apps/app/src/app/pages/plan/plan.page.html
@@ -89,8 +89,8 @@
           >Заметки</tui-textarea>
         </div>
 
-        <div class='tui-form__row tui-space_bottom-8'>
-          <button tuiButton type='submit' [showLoader]='!!(submitLoader$ | async)'>Сохранить</button>
+        <div class='tui-form__buttons tui-space_bottom-8'>
+          <button class='tui-form__button' tuiButton type='submit' [showLoader]='!!(submitLoader$ | async)'>Сохранить</button>
         </div>
       </form>
     </div>
