--- a/apps/app/src/app/pages/trainings/trainings.page.html
+++ b/apps/app/src/app/pages/trainings/trainings.page.html
@@ -7,6 +7,14 @@
 
   <div class='tui-row tui-row_adaptive'>
     <div class='tui-col tui-col_lg-8 tui-col_md-8 tui-col_xs-12'>
+      <button
+        class='tui-space_bottom-8'
+        tuiButton
+        size="m"
+        appearance='secondary'
+        iconRight="tuiIconPlus"
+        (click)="create()"
+      >Создать</button>
 <!--      <ng-container *tuiLet='plans$ | async as plans'>-->
 <!--        <ng-container *ngIf='plans$'>-->
 <!--          <div *ngFor='let plan of plans'>-->
