--- a/apps/app/src/app/pages/auth/auth.page.html
+++ b/apps/app/src/app/pages/auth/auth.page.html
@@ -3,9 +3,9 @@
   <div class='tui-row tui-row_adaptive'>
     <div class='tui-col tui-col_lg-6 tui-col_md-8 tui-col_xs-12'>
       <form [formGroup]='form' class='tui-form' (submit)='sign($event)'>
-        <div class='tui-form__header'>Nosework</div>
+        <div class='tui-form__header'>{{title$ | async}}</div>
         <div class='tui-form__row'>
-          <tui-input formControlName='email'>Email</tui-input>
+          <tui-input type='email' formControlName='email'>Email</tui-input>
         </div>
         <div class='tui-form__row'>
           <tui-input-password formControlName='password'>Пароль</tui-input-password>
